[package]
name = "haywright"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-normalization = "0.1"
rand = "0.8"
regex = "1.10"
once_cell = "1.18"
clap = { version = "4.3.8", features = ["derive"] }
memchr = "2.5"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
